--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -7,10 +7,11 @@ html * {
   outline: none !important; }
 
 body {
-  padding-top: 10px;
-  background: url("../images/jeanbg.jpg");
+  padding-top: 100px;
+  background-color: #240aa1;
   color: #ffffff;
   font-family: 'Unkempt', cursive;
+  
  }
  
 
